--- a/unpackaged/main/default/classes/SOM_SalesPaymentsReportMonthKRSchedule.cls
+++ b/unpackaged/main/default/classes/SOM_SalesPaymentsReportMonthKRSchedule.cls
@@ -7,12 +7,12 @@ public with sharing class SOM_SalesPaymentsReportMonthKRSchedule Implements Sche
     public static void monthExport() {
                     
             DateTime firstDayOfLastMonth = (DateTime)System.Today().toStartOfMonth().addMonths(-1);
-            String firstDay = firstDayOfLastMonth.format('MM/dd/yyyy');
+            String firstDay = firstDayOfLastMonth.format('MM/dd/YYYY');
             
             OrgWideEmailAddress owa = [select id, Address, DisplayName from OrgWideEmailAddress where  Address = 'noreply@rimowa.com' limit 1];
             
             DateTime lastDayOfLastMonth  = firstDayOfLastMonth.addDays(Date.daysInMonth(firstDayOfLastMonth.year(), firstDayOfLastMonth.month()) - 1);
-            String lastDay = lastDayOfLastMonth.format('MM/dd/yyyy');
+            String lastDay = lastDayOfLastMonth.format('MM/dd/YYYY');
             
             System.debug('firstDay' + firstDay + 'lastDay' + lastDay);
             
