--- a/unpackaged/main/default/classes/SOM_InvoiceManagement.cls
+++ b/unpackaged/main/default/classes/SOM_InvoiceManagement.cls
@@ -55,7 +55,7 @@ public with sharing class SOM_InvoiceManagement {
             Logs.info('Invoice Management','SOM_InvoiceManagement','UpdateInvoicesNumber','','');
             
         } catch(Exception e){
-            Logs.error(e,'SOM_InvoiceManagement','UpdateInvoicesNumber','','');   
+              Logs.error(e,'SOM_InvoiceManagement','UpdateInvoicesNumber:||'+newInvMap.Id,'','');   
         } 
     }   
 }
