--- a/unpackaged/main/default/classes/SOM_InvoiceManagement.cls
+++ b/unpackaged/main/default/classes/SOM_InvoiceManagement.cls
@@ -51,8 +51,8 @@ public with sharing class SOM_InvoiceManagement {
                     }
             }
             
-            Logs.debug('Invoice Management','SOM_InvoiceManagement','UpdateInvoicesNumber','',''); 
-            Logs.info('Invoice Management','SOM_InvoiceManagement','UpdateInvoicesNumber','','');
+            Logs.debug('Invoice Management','SOM_InvoiceManagement','UpdateInvoicesNumber||'+newInvMap.Id,'',''); 
+         
             
         } catch(Exception e){
               Logs.error(e,'SOM_InvoiceManagement','UpdateInvoicesNumber:||'+newInvMap.Id,'','');   
